add sessions auth
